# Qt-Creator-quick-start

./: .gitignore  CMakeLists.txt  ╘┤┬δ╩╣╙├╦╡├≈.txt
02/2-1/helloworld/: hellodialog.cpp  hellodialog.ui
02/2-2/helloworld/: main.cpp
02/2-3/helloworld/: hellodialog.ui  main.cpp
02/2-5/helloworld/: hellodialog.ui
03/3-1/mywidget1/: main.cpp
03/3-10/mylineedit/: mywidget.cpp
03/3-2/mywidget2/: main.cpp
03/3-8/myframe/: mywidget.cpp
04/4-1/mylayout/: mywidget.ui
04/4-3/mybuddy/: mywidget.ui
05/5-1/mymainwindow/: mainwindow.cpp  mainwindow.h  mymainwindow.pro
05/5-2/myaction/: myaction.h
05/5-3/myrichtext/: mainwindow.cpp
05/5-6/myrichtext/: mysyntaxhighlighter.cpp  mysyntaxhighlighter.h
05/5-7/mydragdrop/: mainwindow.h
05/5-8/imagedragdrop/: mainwindow.cpp  mainwindow.h
05/5-9/myprint/: mainwindow.cpp
06/6-1/myevent/: mylineedit.h  widget.cpp  widget.h
06/6-2/myevent/: mylineedit.h  widget.cpp  widget.h
06/6-3/mymouseevent/: widget.cpp  widget.h
06/6-4/mykeyevent/: widget.cpp  widget.h
06/6-5/mykeyevent/: widget.h
06/6-6/mytimerevent/: widget.h
06/6-7/mytimerevent/: widget.cpp  widget.h
06/6-8/myeventfilter/: widget.cpp
07/7-1/mysignalslot/: mydialog.cpp  mydialog.h  widget.cpp  widget.h
07/7-10/myforeach/: main.cpp
07/7-11/myalgorithms/: main.cpp
07/7-12/mystring/: main.cpp
07/7-13/myvariant/: widget.cpp
07/7-14/myregexp/: widget.cpp
08/8-3/mymask/: widget.h
16/: CMakeLists.txt
16/16-1/: CMakeLists.txt
16/16-2/: CMakeLists.txt
16/16-3/: CMakeLists.txt
16/16-6/: CMakeLists.txt
16/16-9/myselection/: CMakeLists.txt  mainwindow.cpp  myselection.pro  spinboxdelegate.cpp  spinboxdelegate.h
16/nested_MVD/: CMakeLists.txt  class.uml  common.h  mainwindow.h  mainwindow.ui  model.h
(+209 files in other folders)
